--- a/pages/blog.html
+++ b/pages/blog.html
@@ -50,23 +50,21 @@
             </header>
             <main class="content">
           <article class="article">
-        <h2>Title</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia nostrum fugiat perferendis voluptatem libero necessitatibus adipisci similique amet hic ratione.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, odio.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
+        <h2>LOS MEDALLISTAS OLÍMPICOS ESPAÑOLES TAMBIÉN TRIUNFAN EN LAS REDES SOCIALES</h2>
+        <p>Cinco años han pasado desde los últimos Juegos Olímpicos, un hito en la historia que llega en un tiempo en el que los hábitos de consumo cambian a la velocidad de la luz.</p>
+        <p> Hemos querido realizar un análisis de la conversación que se ha generado en torno a estos a nivel nacional: quién, cómo y a través de qué canales se han consumido estas olimpiadas tan especiales en todos los sentidos.</p>
           </article>
           <article class="article">
-            <h2>Title</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia nostrum fugiat perferendis voluptatem libero necessitatibus adipisci similique amet hic ratione.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, odio.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
-          </article>
+            <h2>¿CÓMO USAR GOOGLE ANALYTICS SIN COOKIES?</h2>
+            <p>¿Guardas cookies de tus usuarios antes de que den su consentimiento? ¿Utilizas Google Analytics y te preocupa perder datos de tu web por cumplir el Reglamento de Protección de datos (GDPR)?</p>
+            <p>En este post te explico paso a paso cómo utilizar Google Analytics sin cookies, tanto para Google Analytics 4 como para Universal, e incluso a configurar Google Tag Manager</p>
+            </article>
           <article class="article">
-                <h2>Title</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia nostrum fugiat perferendis voluptatem libero necessitatibus adipisci similique amet hic ratione.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, odio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, facilis.</p>
-          </article>
+                <h2>ESTRATEGIAS AVANZADAS DE SEO PARA E-COMMERCE</h2>
+                <p>¡Hola, comunidad!
+                    Me gustaría contaros algunas estrategias diferentes y más avanzadas para ecommerce, más allá del SEO básico que solemos hacer. En Internet República solemos aplicarlas en ecommerce de gran tamaño, pero también podéis aplicarlas en ecommerce de cualquier tamaño que gestionéis.</p>
+                <p>Sobre este tema impartí recientemente un webinar en SiteGround, cuyo vídeo completo podéis ver aquí.</p>
+             </article>
            </main>
 
            <aside class="sidebar">
