--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio-Codigowp</title>
+    <link rel="icon" href="./images/Favicon.png">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--Custom CSS-->
@@ -14,7 +17,51 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--MENU INICIO-->
+<!-- Nuevo Menu-->
+<nav class="navbar navbar-expand-sm navbar-light container-fluid">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">
+          <img class="nav-brand" src="./images/logo2.png" alt="Studio Codigowp">
+        </a>
+
+      <button class="navbar-toggler"
+      type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active lista21" aria-current="page" href=".//index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./pages/servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./pages/portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./pages/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./pages/blog.html">Blog</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+
+
+    <!--MENU INICIO antiguo
     <div class="container">
     <nav class="nav-main">
     <a href="index.html"><img class="nav-brand" src="./images/logo2.png" alt="Studio Codigowp"></a>
@@ -33,35 +80,40 @@
       </li>
    </ul>
 </nav>
-
+-->
 
 <hr>
  <!--hero-->
-<header class="hero">
-<h2>Hola</h2>
-<p>Somos un estudio creativo de diseño basa en desarrollo web, contamos con profesionales calificados, competentes, garantizando un diseño a la medida, responsive y escalable</p>
+<header class="hero container-fluid">
+    <h2>Hola</h2>
+    <p>Somos un estudio creativo de diseño basa en desarrollo web</p>
 <!--Boton-->
-<a href="#" class="btn"> Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
+    <a href="./pages/contacto.html" class="btn-hero"> Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
 </header>
 </div>
 
 <!--Redes sociales-->
 <div class="social-container">
     <ul class="social-container-logo">
-        <li><a class="lista2" href="https://facebook.com/studiocodigowp">Facebook</a></li>
-		<li><a class="lista2" href="https://instagram.com/studiocodigowp">Instagram</a></li>
-		<li><a class="lista2" href="https://twitter.com/studiocodigowp">Twitter</a></li>
-		<li><a class="lista2" href="https://behance.com/studiocodigowp">Behance</a></li>
-		<li><a class="lista2" href="https://dribble.com/studiocodigowp">Dribbble</a></li>
+        <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
+		<li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
+		<li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
+		<li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
+		<li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
     </ul>
 </div>
 
 
 
 
-<FOOTER>
+<footer class="text-white container-fluid">
+<div class="container-fluid d-flex justify-content-center">
+  <nav class="row">
+    <p>®Copyright Studio-CodigoWP 2021</p>
+  </nav>
+</div>
 
-</FOOTER>
-
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
