--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>blog</title>
+    <link rel="icon" href="../images/Favicon.png">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <!--Font awesome-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -13,11 +17,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>blog</title>
+
 </head>
 <body>
 
-    <!--MENU INICIO-->
+<!-- Nuevo Menu-->
+<nav class="navbar navbar-expand-sm navbar-light container-fluid">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+          <img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp">
+        </a>
+
+      <button class="navbar-toggler"
+      type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active lista21" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./blog.html">Blog</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+    <!--MENU INICIO viejo
     <div class="container">
         <nav class="nav-main">
         <a href="index.html"><img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp"></a>
@@ -37,6 +83,7 @@
        </ul>
     </nav>
     </div>
+     viejo-->
 
 <Main>
 
@@ -46,7 +93,7 @@
 
         <div class="container1">
             <header class="header">
-                <h1>Logo</h1>
+                <h1>Ultimas Noticias de Marketing Digital</h1>
             </header>
             <main class="content">
           <article class="article">
@@ -62,7 +109,7 @@
           <article class="article">
                 <h2>ESTRATEGIAS AVANZADAS DE SEO PARA E-COMMERCE</h2>
                 <p>¡Hola, comunidad!
-                    Me gustaría contaros algunas estrategias diferentes y más avanzadas para ecommerce, más allá del SEO básico que solemos hacer. En Internet República solemos aplicarlas en ecommerce de gran tamaño, pero también podéis aplicarlas en ecommerce de cualquier tamaño que gestionéis.</p>
+                    Me gustaría contaros algunas estrategias diferentes y más avanzadas para ecommerce, más allá del SEO básico que solemos hacer. En Codigowp solemos aplicarlas en ecommerce de gran tamaño, pero también podéis aplicarlas en ecommerce de cualquier tamaño que gestionéis.</p>
                 <p>Sobre este tema impartí recientemente un webinar en SiteGround, cuyo vídeo completo podéis ver aquí.</p>
              </article>
            </main>
@@ -83,30 +130,37 @@
            </aside>
 
             <div class="relate-post">
-            Another Post
+            <img src="../images/ad01.jpg" alt="publi width="80" height="80">
              </div>
             <div class="relate-post">
-            Another Post
+              <img src="../images/ad02.jpg" alt="publi width="80" height="80">
            </div>
            <div class="relate-post">
-            Another Post
+              <img src="../images/ad03.png" alt="publi width="80" height="80">
            </div>
            <div class="relate-post">
-            Another Post
+              <img src="../images/ad04.jpg" alt="publi width="80" height="80">
            </div>
            <div class="relate-post">
-            Another Post
+              <img src="../images/ad05.png" alt="publi width="80" height="80">
            </div>
-
+           <!--sin footer
            <footer class="footer">
                <h4>Footer</h4>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, itaque.</p>
            </footer>
+          -->
         </div>
 
-
-
-
 </Main>
+
+<footer class="text-white">
+    <div class="container-fluid d-flex justify-content-center">
+      <nav class="row">
+        <p>®Copyright Studio-CodigoWP 2021</p>
+      </nav>
+    </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
