--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Servicios</title>
+    <link rel="icon" href="../images/Favicon.png">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--Custom CSS-->
@@ -13,12 +17,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Servicios</title>
+
 </head>
 <body>
 
+<!-- Nuevo Menu-->
+<nav class="navbar navbar-expand-sm navbar-light container-fluid">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+          <img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp">
+        </a>
 
-    <!--MENU INICIO-->
+      <button class="navbar-toggler"
+      type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active lista21" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link lista21" href="./blog.html">Blog</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+    <!--MENU INICIO Viejo
     <div class="container">
         <nav class="nav-main">
         <a href="index.html"><img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp"></a>
@@ -38,43 +80,55 @@
        </ul>
     </nav>
     </div>
+-->
 
-<main>
-    <h2>Servicios</h2>
+<section class="container-fluid">
+  <div class="row mx-auto my-5">
+    <div class="col-sm-12 d-flex justify-content-center">
+      <h2 class="fs-2 justify-content">Servicios</h2>
+    </div>
+  </div>
+</section>
 
-    <h2> Que hacemos! </h2>
-<p>Descubre nuestros servicios de primera</p>
-
-<div>
-    <h3>Diseño web en wordpress</h3> 
-     <p>el mejor gestor de contenido especializado enfocado para proyectos para emprendedores de pequeña y mediana empresa</p>
+<section class="container-fluid">
+<div class="row w-75 mx-auto servicio-fila">
+<div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
+<img src="../images/desarrollo.svg" alt="Desarrollo" width="180" height="160">
+   <div>
+    <h3 class="fs-5 mt-4 px-4 pb-1">Desarrollo</h3>
+    <p class="px-4">Diseñamos aplicaciones web a la medida para empresas</p>
 </div>
-
-<div>
-    <h3>Desarrollo web</h3> 
-     <p>Diseñamos aplicaciones web a la medida para empresas</p>
 </div>
-
-<div>
-    <h3>Diseño gráfico</h3> 
-     <p>Creación anuncios, maquetaciones, tajetas, viniles, etc</p>
+<div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
+    <img src="../images/dieñografico.svg" alt="Desarrollo" width="180" height="160">
+       <div>
+        <h3 class="fs-5 mt-4 px-4 pb-1">Diseño gráfico</h3>
+        <p class="px-4">Creación anuncios, maquetaciones, tarjetas, viniles, etc</p>
+    </div>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
+        <img src="../images/marketing.svg" alt="Desarrollo" width="180" height="160">
+           <div>
+            <h3 class="fs-5 mt-4 px-4 pb-1">Marketing Digital</h3>
+            <p class="px-4">Diseñamos plan de marketing adaptados para tu negocio</p>
+        </div>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
+            <img src="../images/branding.svg" alt="Desarrollo" width="180" height="160">
+               <div>
+                <h3 class="fs-5 mt-4 px-4 pb-1">Branding</h3>
+                <p class="px-4">Creación y composición de la identidad de la marca</p>
+            </div>
+            </div>
 </div>
+</section>
+<footer class="text-white">
+  <div class="container-fluid d-flex justify-content-center">
+    <nav class="row">
+      <p>®Copyright Studio-CodigoWP 2021</p>
+    </nav>
+  </div>
 
-<div>
-    <h3>Marketing Digital</h3> 
-     <p>Diseñamos plan de marketing adaptados para tu negocio</p>
-</div>
-
-<div>
-    <h3>Branding</h3> 
-     <p>Creación y composición de la identidad de la marca</p>
-</div>
-
-
-
-
-
-
-</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
