--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Descubre nuestro portafolio y solicita tu presupuesto.">
+    <meta name="keywords" content="Agencia de desarrollo web, portafolio web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link rel="icon" href="../images/Favicon.png">
@@ -11,7 +13,7 @@
      <!--Font awesome-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <!--Custom CSS-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/styles.css">
    <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,35 +54,12 @@
             <a class="nav-link lista21" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lista21" href="./blog.html">Blog</a>
+            <a class="nav-link lista21" href="./blogwide.html">Blog</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
-    <!--MENU INICIO
-    <div class="container">
-        <nav class="nav-main">
-        <a href="index.html"><img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp"></a>
-        <ul class="nav-menu">
-        <li><a class="lista" href="../index.html">Inicio</a></li>
-        <li><a class="lista" href="./servicios.html">Servicios</a></li>
-        <li><a class="lista" href="./portafolio.html">Portafolio</a></li>
-        <li><a class="lista" href="./contacto.html">Contacto</a></li>
-        <li><a class="lista" href="./blog.html">Blog</a></li>
-
-    </ul>
-       <ul class="nav-menu-right">
-         <li>
-              <a href="#"><i class="fas fa-search"></i>
-              </a>
-          </li>
-       </ul>
-    </nav>
-    </div>
-    viejo-->
 
 
 <!-- Section: Portfolio -->
@@ -91,41 +70,51 @@
 <section class="portafolio-container">
 
 <div class="portafolio-item"><img src="../images/portafolio/1.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 1</h2>
+    <h2 class="portafolio-titulo">Branding</h2>
  </div>
  <div class="portafolio-item"><img src="../images/portafolio/2.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 2</h2>
+    <h2 class="portafolio-titulo">Seo</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/3.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 3</h2>
+    <h2 class="portafolio-titulo">Marketing</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/4.png" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 4</h2>
+    <h2 class="portafolio-titulo">Diseño web</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/5.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 5</h2>
+    <h2 class="portafolio-titulo">Pantone</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/6.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 6</h2>
+    <h2 class="portafolio-titulo">Estrategia</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/7.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 7</h2>
+    <h2 class="portafolio-titulo">Diseño Gráfico</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/8.png" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 8</h2>
+    <h2 class="portafolio-titulo">Desarrolo web</h2>
 </div>
 <div class="portafolio-item"><img src="../images/portafolio/9.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Imagen 9</h2>
+    <h2 class="portafolio-titulo">Tarjetas</h2>
 </div>
 
 </section>
 </main>
-<footer class="text-white">
-    <div class="container-fluid d-flex justify-content-center">
-      <nav class="row">
-        <p>®Copyright Studio-CodigoWP 2021</p>
-      </nav>
-    </div>
+<footer class="text-white container-fluid pt-4">
+  <div class="container-fluid d-flex justify-content-center py-0">
+    <nav class="row">
+      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+    <ul class="social-container-logo d-flex justify-content-center">
+        <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
+        <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
+        <li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
+        <li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
+        <li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
+    </ul>
+    </nav>
+  </div>
+
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
