--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Que hacemos? Studio codigowp, se especializa en desarrllo web, diseño grafico, wordpress, seo y marketing digital.">
+    <meta name="keywords" content="Agencia de desarrollo web, wordpress, marketing digital, SEO">
     <title>Servicios</title>
     <link rel="icon" href="../images/Favicon.png">
     <!--bootstrap-->
@@ -11,7 +13,7 @@
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--Custom CSS-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,34 +55,13 @@
             <a class="nav-link lista21" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lista21" href="./blog.html">Blog</a>
+            <a class="nav-link lista21" href="./blogwide.html">Blog</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-    <!--MENU INICIO Viejo
-    <div class="container">
-        <nav class="nav-main">
-        <a href="index.html"><img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp"></a>
-        <ul class="nav-menu">
-        <li><a class="lista" href="../index.html">Inicio</a></li>
-        <li><a class="lista" href="./servicios.html">Servicios</a></li>
-        <li><a class="lista" href="./portafolio.html">Portafolio</a></li>
-        <li><a class="lista" href="./contacto.html">Contacto</a></li>
-        <li><a class="lista" href="./blog.html">Blog</a></li>
-
-    </ul>
-       <ul class="nav-menu-right">
-         <li>
-              <a href="#"><i class="fas fa-search"></i>
-              </a>
-          </li>
-       </ul>
-    </nav>
-    </div>
--->
 
 <section class="container-fluid">
   <div class="row mx-auto my-5">
@@ -100,21 +81,21 @@
 </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
-    <img src="../images/dieñografico.svg" alt="Desarrollo" width="180" height="160">
+    <img src="../images/dieñografico.svg" alt="Diseño grafico" width="180" height="160">
        <div>
         <h3 class="fs-5 mt-4 px-4 pb-1">Diseño gráfico</h3>
         <p class="px-4">Creación anuncios, maquetaciones, tarjetas, viniles, etc</p>
     </div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
-        <img src="../images/marketing.svg" alt="Desarrollo" width="180" height="160">
+        <img src="../images/marketing.svg" alt="Marketing" width="180" height="160">
            <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">Marketing Digital</h3>
             <p class="px-4">Diseñamos plan de marketing adaptados para tu negocio</p>
         </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap"">
-            <img src="../images/branding.svg" alt="Desarrollo" width="180" height="160">
+            <img src="../images/branding.svg" alt="Branding" width="180" height="160">
                <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1">Branding</h3>
                 <p class="px-4">Creación y composición de la identidad de la marca</p>
@@ -122,13 +103,21 @@
             </div>
 </div>
 </section>
-<footer class="text-white">
-  <div class="container-fluid d-flex justify-content-center">
+<footer class="text-white container-fluid pt-4">
+  <div class="container-fluid d-flex justify-content-center py-0">
     <nav class="row">
-      <p>®Copyright Studio-CodigoWP 2021</p>
+      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+    <ul class="social-container-logo d-flex justify-content-center">
+        <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
+        <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
+        <li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
+        <li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
+        <li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
+    </ul>
     </nav>
   </div>
-
+  </footer>
+  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
