--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html lang="es">
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Juntos hacemos tu marca en internet más relevante diseñando a medida. Y cuidamos de tu reputación online en Google.">
+    <meta name="keywords" content="Agencia de desarrollo web, HTML, JS, SEO">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio-Codigowp</title>
+    <title>Studio Codigowp</title>
     <link rel="icon" href="./images/Favicon.png">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--Custom CSS-->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/styles.css">
      <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+<header>
+
 <!-- Nuevo Menu-->
 <nav class="navbar navbar-expand-sm navbar-light container-fluid">
     <div class="container-fluid">
@@ -33,7 +37,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -49,71 +53,39 @@
             <a class="nav-link lista21" href="./pages/contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lista21" href="./pages/blog.html">Blog</a>
+            <a class="nav-link lista21" href="./pages/blogwide.html">Blog</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
-
-
-
-
-    <!--MENU INICIO antiguo
-    <div class="container">
-    <nav class="nav-main">
-    <a href="index.html"><img class="nav-brand" src="./images/logo2.png" alt="Studio Codigowp"></a>
-    <ul class="nav-menu">
-    <li><a class="lista" href=".//index.html">Inicio</a></li>
-    <li><a class="lista" href="./pages/servicios.html">Servicios</a></li>
-    <li><a class="lista" href="./pages/portafolio.html">Portafolio</a></li>
-    <li><a class="lista" href="./pages/contacto.html">Contacto</a></li>
-    <li><a class="lista" href="./pages/blog.html">Blog</a></li>
-
-</ul>
-   <ul class="nav-menu-right">
-     <li>
-          <a href="#"><i class="fas fa-search"></i>
-          </a>
-      </li>
-   </ul>
-</nav>
--->
-
+</header>
 <hr>
  <!--hero-->
-<header class="hero container-fluid">
+<main class="hero container-fluid">
     <h2>Hola</h2>
     <p>Somos un estudio creativo de diseño basa en desarrollo web</p>
 <!--Boton-->
     <a href="./pages/contacto.html" class="btn-hero"> Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
-</header>
-</div>
+</main>
 
-<!--Redes sociales-->
-<div class="social-container">
-    <ul class="social-container-logo">
-        <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
-		<li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
-		<li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
-		<li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
-		<li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
-    </ul>
-</div>
-
-
-
-
-<footer class="text-white container-fluid">
-<div class="container-fluid d-flex justify-content-center">
+<footer class="text-white container-fluid pt-4">
+<div class="container-fluid d-flex justify-content-center py-0">
   <nav class="row">
-    <p>®Copyright Studio-CodigoWP 2021</p>
+    <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+  <ul class="social-container-logo d-flex justify-content-center">
+      <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
+      <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
+      <li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
+      <li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
+      <li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
+  </ul>
   </nav>
 </div>
 
 </footer>
+
+<script src="js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
