--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lima- Perú, hola@studio-codigowp.com. +51923146943. oficinas en el Callao - 4495 Av Argentina">
+    <meta name="keywords" content="Agencia de desarrollo web, Contactanos">
     <title>Contacto</title>
     <link rel="icon" href="../images/Favicon.png">
     <!--bootstrap-->
@@ -12,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!--fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,34 +59,12 @@
             <a class="nav-link lista21" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link lista21" href="./blog.html">Blog</a>
+            <a class="nav-link lista21" href="./blogwide.html">Blog</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-    <!--MENU INICIO viejo
-    <div class="container">
-        <nav class="nav-main">
-        <a href="index.html"><img class="nav-brand" src="../images/logo2.png" alt="Studio Codigowp"></a>
-        <ul class="nav-menu">
-        <li><a class="lista" href="../index.html">Inicio</a></li>
-        <li><a class="lista" href="./servicios.html">Servicios</a></li>
-        <li><a class="lista" href="./portafolio.html">Portafolio</a></li>
-        <li><a class="lista" href="./contacto.html">Contacto</a></li>
-        <li><a class="lista" href="./blog.html">Blog</a></li>
-
-    </ul>
-       <ul class="nav-menu-right">
-         <li>
-              <a href="#"><i class="fas fa-search"></i>
-              </a>
-          </li>
-       </ul>
-    </nav>
-    </div>
-    viejo-->
 
 <main>
 
@@ -136,12 +116,21 @@
 </Section>
 </main>
 
-<footer class="text-white">
-    <div class="container-fluid d-flex justify-content-center">
-      <nav class="row">
-        <p>®Copyright Studio-CodigoWP 2021</p>
-      </nav>
-    </div>
+<footer class="text-white container-fluid pt-4">
+  <div class="container-fluid d-flex justify-content-center py-0">
+    <nav class="row">
+      <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2021</p>
+    <ul class="social-container-logo d-flex justify-content-center">
+        <li><a class="lista2" href="https://facebook.com/studiocodigowp"><i class="fab fa-facebook"></i></a></li>
+        <li><a class="lista2" href="https://instagram.com/studiocodigowp"><i class="fab fa-instagram"></i></a></li>
+        <li><a class="lista2" href="https://twitter.com/studiocodigowp"><i class="fab fa-twitter"></i></a></li>
+        <li><a class="lista2" href="https://behance.com/studiocodigowp"><i class="fab fa-behance"></i></a></li>
+        <li><a class="lista2" href="https://dribble.com/studiocodigowp"><i class="fab fa-dribbble"></i></a></li>
+    </ul>
+    </nav>
+  </div>
+  
+  </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
