--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,7 +108,7 @@
     <ul>
         <li><i class="fas fa-map-marker-alt"></i> Lima, Perú</li>
         <li><i class="fas fa-phone"></i> (111) 111 111</li>
-        <li><i class="fas fa-envelope-open-text"></i> contact@studio-codigowp.com</li>
+        <li><i class="fas fa-envelope-open-text"></i>contacto@studio-codigowp.com</li>
     </ul>
     <p>Diseño Grafico, Desarrollo Web Front-End, Diseño en Wordpress, SEO, Marketing, </p>
     <p>studio-codigowp.com</p>
@@ -129,7 +129,7 @@
     </ul>
     </nav>
   </div>
-  
+
   </footer>
 
 
