--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 <hr>
  <!--hero-->
 <main class="hero container-fluid">
-    <h2>Hola</h2>
-    <p>Somos un estudio creativo de diseño basa en desarrollo web</p>
+    <h2 class="titulo1">Hola</h2>
+    <p class="titulo2">Somos creativos, Diseña tu web lo hacemos por ti</p>
 <!--Boton-->
-    <a href="./pages/contacto.html" class="btn-hero"> Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
+    <a href="./pages/contacto.html" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
 </main>
 
 <footer class="text-white container-fluid pt-4">
@@ -85,7 +85,6 @@
 
 </footer>
 
-<script src="js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
