--- a/pages/blogwide.html
+++ b/pages/blogwide.html
@@ -72,11 +72,12 @@
       <div class="blog-list">
      <ul>
          <li>
+           <!-- item1 -->
              <div class="blog-item">
                  <div class="blog-item-in">
                      <span class="counter">01</span>
                      <div class="title-w">
-                        <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/1.jpg" width="150px" height="150px" alt=""></div>
+                        <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/1.jpg" width="120px" height="120px" alt=""></div>
 
                         <div class="title-h">
                             <p>By Admin / Julio 30,2021</p>
@@ -92,11 +93,12 @@
              </div>
          </li>
          <li>
+           <!-- item2 -->
             <div class="blog-item">
                 <div class="blog-item-in">
                     <span class="counter">02</span>
                     <div class="title-w">
-                       <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/3.jpg" width="150px" height="150px" alt=""></div>
+                       <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/3.jpg" width="120px" height="120px" alt=""></div>
 
                        <div class="title-h">
                            <p>By Admin / Mayo 27,2021</p>
@@ -112,11 +114,12 @@
             </div>
         </li>
         <li>
+          <!-- item3 -->
           <div class="blog-item">
               <div class="blog-item-in">
                   <span class="counter">03</span>
                   <div class="title-w">
-                     <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/4.jpg" width="150px" height="150px" alt=""></div>
+                     <div class="abs-img" data-bg-img="images/blog/1.jpg"><img src="../images/blog/4.jpg" width="120px" height="120px" alt=""></div>
 
                      <div class="title-h">
                          <p>By Admin / abril 29,2021</p>
@@ -150,7 +153,7 @@
     </ul>
     </nav>
   </div>
-  
+
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
