--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -69,32 +69,32 @@
     </div>
 <section class="portafolio-container">
 
-<div class="portafolio-item"><img src="../images/portafolio/1.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Branding</h2>
+<div class="portafolio-item"><img src="../images/portafolio/1.jpg" alt="Imagen de branding" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Branding</h2>
  </div>
- <div class="portafolio-item"><img src="../images/portafolio/2.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Seo</h2>
+ <div class="portafolio-item"><img src="../images/portafolio/2.jpg" alt="Imagen de seo" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Seo</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/3.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Marketing</h2>
+<div class="portafolio-item"><img src="../images/portafolio/3.jpg" alt="Imagen" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Marketing</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/4.png" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Diseño web</h2>
+<div class="portafolio-item"><img src="../images/portafolio/4.png" alt="Imagen Diseño web" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Diseño web</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/5.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Pantone</h2>
+<div class="portafolio-item"><img src="../images/portafolio/5.jpg" alt="Imagen Pantone" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Pantone</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/6.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Estrategia</h2>
+<div class="portafolio-item"><img src="../images/portafolio/6.jpg" alt="Imagen Estrategia" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Estrategia</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/7.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Diseño Gráfico</h2>
+<div class="portafolio-item"><img src="../images/portafolio/7.jpg" alt="Imagen Diseño Grafico" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Diseño Gráfico</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/8.png" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Desarrolo web</h2>
+<div class="portafolio-item"><img src="../images/portafolio/8.png" alt="Imagen Desarrollo Web" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Desarrolo web</h2>
 </div>
-<div class="portafolio-item"><img src="../images/portafolio/9.jpg" alt="" class="portafolio__img">
-    <h2 class="portafolio-titulo">Tarjetas</h2>
+<div class="portafolio-item"><img src="../images/portafolio/9.jpg" alt="Imagen de tarjetas" class="portafolio__img">
+    <h2 class="portafolio-titulo" id="ajusteh2">Tarjetas</h2>
 </div>
 
 </section>
