--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 <hr>
  <!--hero-->
 <main class="hero container-fluid">
-    <h2 class="titulo1">Hola</h2>
-    <p class="titulo2">Somos creativos, Diseña tu web lo hacemos por ti</p>
+    <h2 id="primero" class="texto1">Hola</h2>
+    <p id="segundo" class="texto2">Somos creativos, Diseñamos tu web y lo hacemos por ti</p>
 <!--Boton-->
-    <a href="./pages/contacto.html" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
+    <a href="" id="btn-hero" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
 </main>
 
 <footer class="text-white container-fluid pt-4">
@@ -86,5 +86,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
