--- a/index.html
+++ b/index.html
@@ -19,19 +19,43 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-<!-- preload -->
-<!-- <div class="preload">
-    <div class="preload__img">
-        <img class="imgLogo" src="./images/preload/253morado3.png" alt="">
-        <div class="ball"></div>
+<body onload="onLoad()">
+  <div id="clima-container">
+    <div id="block">
+        <div id="location"></div>
     </div>
-</div> preload out-->
+    <div id="block">
+      <div id="date"></div>
+    </div>
+    <div id="block">
+      <div id="description"></div>
+    </div>
+    <div id="block">
+        <div class="information-containier">
+            Temperatura
+            <div class="info" id="temperature"></div>
+            ºC
+        </div>
+    </div>
+    <div id="block">
+      <div class="information-containier">
+        Presión
+        <div class="info" id="pressure"></div>
+        hPa
+    </div>
+    </div>
+    <div id="block">
+      <div class="information-containier">
+        Humedad
+        <div class="info" id="humidity"></div>
+        %
+    </div>
+    </div>
+</div>
 
-<header>
 
 <!-- Nuevo Menu-->
-<nav class="navbar navbar-expand-sm navbar-light container-fluid">
+<nav id="paradis" class="navbar navbar-expand-sm navbar-light container-fluid">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
           <img class="nav-brand" src="./images/logo2.png" alt="Studio Codigowp">
@@ -72,16 +96,16 @@
     </div>
   </nav>
 </header>
-<hr>
+<hr id="parafooter">
  <!--hero-->
-<main class="hero container-fluid">
+<main class="hero container-fluid hero2">
     <h2 id="primero" class="texto1">Hola</h2>
     <p id="segundo" class="texto2">Somos creativos, Diseñamos tu web y lo hacemos por ti</p>
 <!--Boton-->
     <a href="./pages/contacto.html" id="btn-hero" class="btn-hero">Solicitar Presupuesto <i class="fas fa-angle-double-right"></i></a>
 </main>
 
-<footer class="text-white container-fluid pt-4">
+<footer id="parafooter" class="text-white container-fluid pt-4">
 <div class="container-fluid d-flex justify-content-center py-0">
   <nav class="row">
     <p class="d-flex justify-content-center">®Copyright Studio-CodigoWP 2022</p>
@@ -97,7 +121,10 @@
 
 </footer>
 
+<div id="loader" class="loader"></div>
+<header>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<script src="inicio.js"></script>
+<script src="./js/ajax.js"></script>
 </body>
 </html>
