--- a/pages/login.html
+++ b/pages/login.html
@@ -70,14 +70,14 @@
 
           <form id="formu" action="#">
             <div class="field" id="emailinput">
-              <input type="text" required>
+              <input type="text" >
               <label>Email</label>
             </div>
             <div class="field" id="passwordinput">
-              <input type="password" required>
+              <input type="password" >
               <label>Contraseña</label>
             </div>
-            <div id="warnings"></div>
+            <div class="warnings" id="warnings"></div>
             <div class="content">
               <div class="checkbox">
                 <input type="checkbox" id="remember-me">
@@ -86,7 +86,7 @@
               <div class="pass-link"><a href="#">Olvide la contraseña?</a></div>
             </div>
              <!-- <div class="field">
-             <input type="submit" value="Login"> 
+             <input type="submit" value="Login">
               </div>
               -->
               <button class="btn" id="button" type="submit">Login</button>
